--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <body>
   <div class="container">
-    <img src="/images/image-qr-code.png" />
+    <img src="/images/image-qr-code.png" alt='qr code' />
     <p class="first_paragraph">Improve your front-end <br> skills by building projects</p>
     <p class="second_paragraph">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
     </p>
